--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "moment": "^2.30.1",
