--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/script.js"
+    "start": "node src/script.js",
+    "seed": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.21.0",
     "@types/express": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "moment": "^2.30.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prisma": "^5.21.0"
   }
 }
