--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "node_proj",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "script.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/script.js",
-    "seed": "ts-node prisma/seed.ts"
+    "start": "ts-node src/script.ts",
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "express": "^4.21.0",
     "moment": "^2.30.1",
     "path": "^0.12.7",
-    "prisma": "^5.21.0"
+    "prisma": "^5.21.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
