--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/script.ts",
+    "prisma:format": "prisma format",
+    "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.21.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "moment": "^2.30.1",
@@ -20,5 +25,8 @@
     "prisma": "^5.21.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
