--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@prisma/client": "^5.21.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "prisma": "^5.21.0",
