--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "script.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/script.ts",
+    "start": "nodemon src/script.ts",
     "prisma:format": "prisma format",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts"
@@ -25,6 +25,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "prisma": "^5.21.0",
     "ts-node": "^10.9.2",
